--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>Document</title>
   </head>
   <body>
+    <ul>
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="signup.html">sign up</a></li>
+      <li><a href="videos.html">videos</a></li>
+    </ul>
     <center>
       <button type="button" onclick="changeColor()">kbas</button>
       <button type="button" onclick="changeColor2()">kbas2</button>
